# windows_startup_manager

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/application/: add_command.rs  add_executable.rs  kill_all_processes.rs  kill_process.rs  list_entries.rs  mod.rs  remove_entry.rs
src/domain/: mod.rs  models.rs  models_test.rs  repository.rs  validator.rs  validator_test.rs
src/infrastructure/: mod.rs  process.rs  process_test.rs  registry.rs
src/interfaces/: cli.rs  mod.rs  presenter.rs
src/shared/: error.rs
tests/: integration_test.rs
